<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.starter.StarterActivity">

    <ImageView
        android:id="@+id/iv_bg_starter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_starter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_icon_starter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_starter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_welcome_starter"
        style="@style/TextPrimaryHeadingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/welcome_starter_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_starter"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_welcome_msg_starter"
        style="@style/TextPrimaryBodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_secondary"
        android:text="@string/welcome_starter_msg"
        android:textColor="@color/colorOpacityText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_starter"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_starter"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/ll_nav_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginEnd="@dimen/margin_secondary"
        android:layout_marginBottom="@dimen/margin_primary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_to_login"
            style="@style/TextPrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_primary"
            android:layout_marginTop="@dimen/margin_primary"
            android:layout_marginBottom="@dimen/margin_primary"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rectangle_left"
            android:text="@string/login"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/btn_to_register"
            style="@style/TextPrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_primary"
            android:layout_marginBottom="@dimen/margin_primary"
            android:layout_marginEnd="@dimen/margin_primary"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rectangle_right"
            android:text="@string/register" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            style="@style/TextPrimaryCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_service_msg" />

        <TextView
            android:id="@+id/tv_to_terms"
            style="@style/TextPrimaryCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_spacing"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/terms_of_service"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>