<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.project.android.app.inotes.ui.verification.VerificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.verification.VerificationActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:onProgressBar="@{viewModel.onProgressBar()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/TextPrimaryHeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_secondary"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_icon_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_verification"
            app:layout_constraintBottom_toTopOf="@+id/tv_verification_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_verification_heading"
            style="@style/TextPrimaryHeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_heading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_verification_msg"
            style="@style/TextPrimaryBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:layout_marginEnd="@dimen/margin_secondary"
            android:gravity="center"
            android:text="@string/verification_msg"
            android:textColor="@color/colorOpacityText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_heading"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_register"
            style="@style/TextPrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_secondary"
            android:background="@drawable/bg_button_rectangle_stroke"
            android:onClick="@{() -> viewModel.doRequestEmailVerification()}"
            android:text="@string/activate_account"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/ll_to_contact_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/ll_to_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_secondary"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                style="@style/TextPrimaryCaptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_us_msg" />

            <TextView
                android:id="@+id/tv_to_login"
                style="@style/TextPrimaryCaptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_spacing"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/contact_us"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
